# AraeChat

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: breakthrough.yml  ci_linux.yml  ci_macos.yml
belowc/: Cargo.toml
belowc/src/: emitter.rs  fs_atomic.rs  lexer.rs  lib.rs  main.rs  mapping.rs  sem.rs
belowc/tests/: fuzzer.rs
belowc_bin/: Cargo.toml
belowc_bin/src/: main.rs  panic.rs  windows.rs
ci/: run_all_remaining.ps1  run_all_remaining.sh  run_gate.ps1  x04_repro_check.ps1  x04_repro_check.sh
ci/artifacts/: g14_S0.txt  g14_S2.txt  g14_S4.txt  g14_S5.txt  g14_S6.txt  g14_S7.txt  g19_fs_snapshot.txt
ci/checklists/: G-01.md  G-02.md  G-03.md  G-04.md  G-05.md  G-06.md  G-07.md  G-08.md  G-09.md  G-10.md  G-11.md  G-12.md  G-13.md  G-14.md  G-15.md  G-16.md  G-17.md  G-18.md  G-19.md  _TEMPLATE.md
ci/logs/: build_err.txt  build_release_err.txt  g04_deps.txt  g05_no_alloc.txt  g06_symbols.txt  g07_stderr.txt  g08_cli_matrix.txt  g09_exit_codes.txt  g10_lexer_allow.txt  g11_lexer_forbid.txt  g12_no_jong.txt  g13_t1_allowed.txt  g14_state_encoding.txt  g15_streaming_audit.txt  g16_acc_rule.txt  g17_emit_hex.txt  g18_eof_flush.txt  g19_atomic.txt  run_all_preflight.txt  run_all_summary.txt
ci/tools/: gen_from_ssot.py  x05_check.sh
crates/eamen_core/: Cargo.toml
crates/zk_backend_sp1/guest/: Cargo.toml
crates/zk_backend_sp1/guest/src/: main.rs  sha256.rs
docs/: EXTENSIONS_STATUS.md  PLATFORMS.md  SSOT_SUMMARY.md
spec/: SSOT.md  gates.yaml  ssot.lock.md  ssot.yaml
tests/golden/: make_golden.ps1
tests/vectors/: fail_jong.txt  (+3 more)
(+7 files in other folders)
