[workspace]
resolver = "2"

members = [
  "belowc_bin",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

exclude = [
  "attic/**",
  "target/**",
  "bm-hub", "bm-chat", "bm-suite", "bm-train", "bm-norm",
  "bm-zpbot", "bm-infer", "bm-verifier", "e-zkvm",
  "seq1_*", "seq2_*", "seq3_*", "seq4_*", "seq5_*",
  "bin_aresarang", "core_gongri",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
