[package]
name = "zk_backend_sp1_guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-backend-sp1-guest"
path = "src/main.rs"

[dependencies]
eamen_core = { path = "../../../crates/eamen_core" }

# SP1 guest crate (template-specific)
sp1-zkvm = { version = "=5.2.4" }

# no external crypto deps: in-tree SHA-256
